2.0.1
use process builder instead of cd command
use process builder to redirect output to a console log file under appId/logs/log-console.txt in case there is an error